fix: Fix Alignment of Links embedded in Assets placeholders - MEED-776 (#123)

--- a/deeds-dapp-webapp/src/main/webapp/static/css/deeds.css
+++ b/deeds-dapp-webapp/src/main/webapp/static/css/deeds.css
@@ -84,6 +84,12 @@ html {
   margin-top: 2px !important;
 }
 
+.embedded-link-text {
+  display: inline;
+  line-height: inherit;
+  vertical-align: inherit;
+}
+
 .letter-spacing-normal {
   letter-spacing: normal!important;
 }
